initial commit for project-board-api v2

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
+  "semi": false,
   "overrides": [
     {
       "files": ["*.ts", "*.mts"],
