update db env variables

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ PORT=4000
 DB_PORT=5432
 DB_NAME=project-board-db
 DB_HOST=localhost
-DB_USER=sfailla
-DB_PASSWORD=1234
+DB_USER=steven.failla
+DB_PASSWORD=Madison10122022*
 
 # BCRYPT
 BCRYPT_SALT_ROUNDS=10
